# opendpd/schemas/__init__.py
@@ -100,6 +100,8 @@ from .results import (
     ComparisonReport,
     DatasetEvidence,
     EvaluationResult,
+    ExecutionEvidence,
+    StreamConsistency,
     HistoryPoint,
     ModelEvidence,
     ScalingInfo,
@@ -143,7 +145,7 @@ __all__ = [
     "CellAggregate",
     "Condition", "ConditionAudit", "ConditionSet", "EvidenceBar", "TargetRule",
     "PACKAGE_VERSION", "ImportReport", "PackageDataset", "PackageFile", "PackageManifest", "PackageReference",
-    "BaselineScore", "ComparisonPair", "ComparisonReport", "DatasetEvidence", "EvaluationResult", "HistoryPoint",
+    "BaselineScore", "ComparisonPair", "ComparisonReport", "DatasetEvidence", "EvaluationResult", "ExecutionEvidence", "StreamConsistency", "HistoryPoint",
     "ModelEvidence", "ScalingInfo", "SignalReference", "SignalStage", "SurrogateCoverage",
     "TERMINAL_STATUSES", "LineageLink", "LineageRelation", "RunError", "RunEvent", "RunEventType", "RunLineage",
     "RunRecord", "RunStatus", "WorkerInfo", "can_transition", "heartbeat_is_stale",
